--- a/web/pages/profile-request.html
+++ b/web/pages/profile-request.html
@@ -13,6 +13,14 @@
         <link href="../resources/sbadmin/dist/css/sb-admin-2.css" rel="stylesheet">
         <!-- Custom Fonts -->
         <link href="../resources/sbadmin/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <!-- jQuery -->
+        <script src="../resources/sbadmin/vendor/jquery/jquery.min.js"></script>
+        <!-- Bootstrap Core JavaScript -->
+        <script src="../resources/sbadmin/vendor/bootstrap/js/bootstrap.min.js"></script>
+        <!-- Metis Menu Plugin JavaScript -->
+        <script src="../resources/sbadmin/vendor/metisMenu/metisMenu.min.js"></script>
+        <!-- Custom Theme JavaScript -->
+        <script src="../resources/sbadmin/dist/js/sb-admin-2.js"></script>
     </head>
     <body>
         <div id="wrapper">
@@ -58,7 +66,7 @@
                     </div><!-- /.sidebar-collapse -->
                 </div><!-- /.navbar-static-side -->
             </nav>
-            
+
             <div id="page-wrapper">
                 <div class="container-fluid">
                     <div class="row">
@@ -225,16 +233,19 @@
                         </div><!-- /.col-lg-6 -->
                     </div><!-- /.row -->
                 </div><!-- /.container-fluid -->
+                <div style="position: fixed; bottom: 20px; right: 20px">
+                    <button type="button" class="scrollToTop btn btn-danger btn-circle btn-lg"><i class="fa fa-chevron-up"></i></button>
+                </div>
             </div><!-- /#page-wrapper -->
-
         </div><!-- /#wrapper -->
-        <!-- jQuery -->
-        <script src="../resources/sbadmin/vendor/jquery/jquery.min.js"></script>
-        <!-- Bootstrap Core JavaScript -->
-        <script src="../resources/sbadmin/vendor/bootstrap/js/bootstrap.min.js"></script>
-        <!-- Metis Menu Plugin JavaScript -->
-        <script src="../resources/sbadmin/vendor/metisMenu/metisMenu.min.js"></script>
-        <!-- Custom Theme JavaScript -->
-        <script src="../resources/sbadmin/dist/js/sb-admin-2.js"></script>
+        <script type="text/javascript">
+            $(document).ready(function () {
+                $('.scrollToTop').click(function () {
+                    console.log("Hello");
+                    $('html, body').animate({scrollTop: 0}, 800);
+                    return false;
+                });
+            });
+        </script>
     </body>
 </html>
